--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.0",
     "mobx": "^6.6.0",
+    "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-json-view": "^1.21.3",
-    "react-router-dom": "^6.3.0"
+    "react-json-view-lite": "^0.9.5",
+    "react-router-dom": "^6.3.0",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -53,7 +55,7 @@
     "stylelint-config-standard-scss": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
     "webpack": "5.72.1",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "4.9.0"
   },
   "babel": {
