--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.308.0",
     "mobx": "^6.6.0",
     "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.5.0",
@@ -28,6 +32,8 @@
     "react-dom": "^18.1.0",
     "react-json-view-lite": "^0.9.5",
     "react-router-dom": "^6.3.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "url-join": "^5.0.0"
   },
   "devDependencies": {
@@ -35,25 +41,31 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.9.0",
     "eslint": "7.32.0",
     "eslint-plugin-react": "^7.30.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
+    "postcss-loader": "^7.3.4",
     "process": "^0.11.10",
     "sass": "^1.52.1",
     "sass-lint-auto-fix": "^0.21.2",
     "sass-loader": "^13.0.0",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.4",
     "stylelint": "^14.8.5",
     "stylelint-config-standard-scss": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
+    "tailwindcss": "^3.4.1",
     "webpack": "5.72.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "4.9.0"
