--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lint-scss": "stylelint \"src/**/*.scss\"",
     "lint-js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "fix-js": "npm run lint-js -- --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tscheck": "tsc",
+    "start": "webpack serve --open",
+    "build-prod": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
     "@eluvio/elv-client-js": "^3.2.30",
@@ -21,35 +24,47 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.11.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.308.0",
     "mobx": "^6.6.0",
     "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "react-json-view-lite": "^0.9.5",
     "react-router-dom": "^6.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "url-join": "^5.0.0"
+    "url-join": "^5.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
+    "@babel/core": "7.23.7",
     "@babel/eslint-parser": "^7.18.2",
-    "@babel/preset-env": "^7.18.0",
-    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-env": "7.23.8",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
+    "@types/react": "18.2.47",
+    "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.16",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "8.3.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.9.0",
+    "css-loader": "6.9.0",
     "eslint": "7.32.0",
     "eslint-plugin-react": "^7.30.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.6.0",
     "husky": "^8.0.1",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
@@ -57,23 +72,50 @@
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^7.3.4",
     "process": "^0.11.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sass": "^1.52.1",
     "sass-lint-auto-fix": "^0.21.2",
     "sass-loader": "^13.0.0",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.4",
+    "style-loader": "3.3.4",
     "stylelint": "^14.8.5",
     "stylelint-config-standard-scss": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3",
     "webpack": "5.72.1",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.0"
   },
   "babel": {
     "presets": [
       "@babel/preset-env",
-      "@babel/preset-react"
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ],
+      "@babel/preset-typescript"
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./"
+          ],
+          "alias": {
+            "@/": "src/@",
+            "@/components": "src/components",
+            "@/*": [
+              "./@"
+            ]
+          }
+        }
+      ]
     ]
   }
 }
