--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build-prod": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
-    "@eluvio/elv-client-js": "^3.2.30",
+    "@eluvio/elv-client-js": "github:eluv-io/elv-client-js#move-tenant-auth",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "json": "^11.0.0",
     "lucide-react": "^0.308.0",
     "mobx": "^6.6.0",
     "mobx-persist-store": "^1.1.3",
@@ -44,6 +45,7 @@
     "react-router-dom": "^6.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.3",
     "url-join": "^5.0.0",
     "zod": "^3.22.4"
   },
@@ -53,6 +55,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.16",
